--- a/main.html
+++ b/main.html
@@ -4,10 +4,26 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		main{
+			width:"150px";
+			height:"150px";
+			background-color:"#000000";
+		}
+		p{
+		 text-color:"white"
+			left-margin:"32px";
+				padding:"10px 10px 10px 10px";
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main Class="accio" ID="job">
+		<p Class="hello-accio">Hello Accio Job </p>
+		
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
