--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 		main{
 			width:"150px";
 			height:"150px";
-			background-color:"#000000";
+			background-color: black;
 		}
 		p{
-		 text-color:"white"
-			left-margin:"32px";
+		 color: #ffffff;
+			  margin-left:"32px";
 				padding:"10px 10px 10px 10px";
 		}
 	</style>
