--- a/main.html
+++ b/main.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" href="styles.css">
 	<style>
 		main{
-			width:"150px";
-			height:"150px";
+			width:150px;
+			height:150px;
 			background-color: black;
 		}
-		p{
+		.hello-accio{
 		 color: #ffffff;
-			  margin-left:"32px";
-				padding:"10px 10px 10px 10px";
+			  margin-left:32px;
+				padding:10px 10px 10px 10px;
 		}
 	</style>
 </head>
@@ -21,7 +21,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main Class="accio" ID="job">
-		<p Class="hello-accio">Hello Accio Job </p>
+		<p Class="hello-accio">Hello Accio Job</p>
 		
 	</main>
     <script type="text/javascript" src="./script.js">
